--- a/app/src/main/res/layout/activity_detalle_product.xml
+++ b/app/src/main/res/layout/activity_detalle_product.xml
@@ -8,8 +8,10 @@
     tools:context="edu.eci.cosw.cheapestPrice.DetalleProductActivity">
 
     <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_width="368dp"
+        android:layout_height="495dp"
+        tools:layout_editor_absoluteY="8dp"
+        tools:layout_editor_absoluteX="8dp">
 
         <LinearLayout
             android:layout_width="match_parent"
