--- a/app/src/main/res/layout/activity_menu_tendero.xml
+++ b/app/src/main/res/layout/activity_menu_tendero.xml
@@ -7,9 +7,163 @@
     tools:context="edu.eci.cosw.cheapestPrice.MenuTenderoActivity">
 
     <LinearLayout
-        android:layout_width="365dp"
-        android:layout_height="172dp"
-        android:orientation="horizontal"
-        tools:layout_editor_absoluteX="9dp"
-        tools:layout_editor_absoluteY="10dp"></LinearLayout>
+        android:layout_width="368dp"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="vertical"
+        tools:layout_editor_absoluteY="0dp"
+        tools:layout_editor_absoluteX="8dp">
+
+        <TextView
+            android:layout_width="310dp"
+            android:layout_height="39dp"
+            android:layout_marginTop="15dp"
+            android:text="Información de tu Tienda"
+            android:textSize="26dp"
+            android:textColor="@color/colorAzul"
+            android:textStyle="bold"
+            app:layout_constraintLeft_toLeftOf="parent"
+            tools:layout_editor_absoluteY="16dp" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp">
+
+            <TextView
+                android:id="@+id/textShopName"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="18dp"
+                android:text="Nombre: "
+                android:textSize="20dp"
+                android:textColor="@color/colorPrimaryDark"
+                android:layout_alignParentTop="true" />
+
+            <TextView
+                android:id="@+id/shopName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="18dp"
+                android:textSize="20dp"
+                android:text="nombre tienda"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp">
+
+            <TextView
+                android:id="@+id/textShopNit"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="18dp"
+                android:text="Nit: "
+                android:textSize="20dp"
+                android:textColor="@color/colorPrimaryDark"
+                android:layout_alignParentTop="true" />
+
+            <TextView
+                android:id="@+id/shopNit"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="18dp"
+                android:textSize="20dp"
+                android:text="NIT tienda"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp">
+
+            <TextView
+                android:id="@+id/textShopAddress"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="18dp"
+                android:text="Dirección: "
+                android:textSize="20dp"
+                android:textColor="@color/colorPrimaryDark"
+                android:layout_alignParentTop="true" />
+
+            <TextView
+                android:id="@+id/shopAddress"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="18dp"
+                android:textSize="20dp"
+                android:text="direccion tienda"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp">
+
+            <TextView
+                android:id="@+id/textShopPhone"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="18dp"
+                android:text="Teléfono: "
+                android:textSize="20dp"
+                android:textColor="@color/colorPrimaryDark"
+                android:layout_alignParentTop="true" />
+
+            <TextView
+                android:id="@+id/shopPhone"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="18dp"
+                android:textSize="20dp"
+                android:text="telefono tienda"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp">
+
+            <Button
+                android:id="@+id/editShop"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:background="@mipmap/ic_edit"
+                android:layout_marginStart="150dp"
+                android:layout_marginLeft="150dp"
+                android:onClick="editShop"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="100dp">
+
+            <Button
+                android:id="@+id/productos"
+                android:layout_width="180dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="18dp"
+                android:text="Productos"
+                android:textSize="20dp"
+                android:textColor="@color/cardview_dark_background"
+                android:layout_alignParentTop="true"
+                android:onClick="productos"/>
+
+            <Button
+                android:id="@+id/opiniones"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="18dp"
+                android:textSize="20dp"
+                android:textColor="@color/cardview_dark_background"
+                android:text="Opiniones"
+                android:onClick="opiniones"/>
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+
 </android.support.constraint.ConstraintLayout>
