--- a/app/src/main/res/layout/popuptienda.xml
+++ b/app/src/main/res/layout/popuptienda.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
@@ -51,7 +54,24 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="Ver mapa" />
+                    android:text="Ver mapa"
+                    android:onClick="verMapa"/>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:id="@+id/mapLin"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:visibility="gone">
+                <fragment xmlns:android="http://schemas.android.com/apk/res/android"
+                    xmlns:tools="http://schemas.android.com/tools"
+                    android:id="@+id/mapShop"
+                    android:name="com.google.android.gms.maps.SupportMapFragment"
+                    android:layout_width="match_parent"
+                    android:layout_height="200dp"
+                    tools:context="edu.eci.cosw.cheapestPrice.PopUpTiendaInfo"
+                    android:layout_weight="0.90"
+                    />
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
@@ -82,3 +102,4 @@
         </LinearLayout>
 
 </LinearLayout>
+</ScrollView>
