--- a/app/src/main/res/layout/shopping_list_products.xml
+++ b/app/src/main/res/layout/shopping_list_products.xml
@@ -24,6 +24,22 @@
             android:text="Ver ruta" />
 
     </LinearLayout>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:id="@+id/mapLinR"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:visibility="gone">
+        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:id="@+id/mapRuta"
+            android:name="com.google.android.gms.maps.SupportMapFragment"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            tools:context="edu.eci.cosw.cheapestPrice.PopUpTiendaInfo"
+            android:layout_weight="0.90"
+            />
+    </LinearLayout>
     <ScrollView
         android:id="@+id/ScrollViewProductos"
         android:layout_width="fill_parent"
