--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -22,7 +22,7 @@
         tools:layout_editor_absoluteX="0dp" />
 
     <android.support.design.widget.AppBarLayout
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay"
         tools:layout_editor_absoluteY="0dp"
@@ -39,10 +39,10 @@
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/card_view_search_products"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:scrollbars="vertical"
-        android:layout_width="368dp"
-        android:layout_height="455dp"
-        tools:layout_editor_absoluteY="48dp"
-        tools:layout_editor_absoluteX="8dp" />
+        tools:layout_editor_absoluteX="8dp"
+        tools:layout_editor_absoluteY="48dp" />
 
 </android.support.design.widget.CoordinatorLayout>
