--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,8 +6,10 @@
     android:layout_height="match_parent"
     tools:context="edu.eci.cosw.cheapestPrice.MainActivity">
     <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_width="368dp"
+        android:layout_height="495dp"
+        tools:layout_editor_absoluteY="8dp"
+        tools:layout_editor_absoluteX="8dp">
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -26,7 +28,7 @@
             android:id="@+id/iniciar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Inicie sesión:"
+            android:text=""
             android:textSize="@dimen/text_size_large"
             android:layout_below="@+id/logo"/>
 
@@ -63,7 +65,7 @@
             android:id="@+id/registro_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="O registrese:"
+            android:text="Empieza a ahorrar!"
             android:textSize="@dimen/text_size_large"
             android:layout_below="@+id/login"/>
         <Button
