--- a/app/src/main/res/layout/product_view.xml
+++ b/app/src/main/res/layout/product_view.xml
@@ -30,7 +30,7 @@
             android:padding="5dp">
 
             <TextView
-                android:id="@+id/tienda"
+                android:id="@+id/categoria"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@android:color/black"
