--- a/app/src/main/res/layout/activity_opinions.xml
+++ b/app/src/main/res/layout/activity_opinions.xml
@@ -33,7 +33,7 @@
             android:orientation="vertical">
 
             <android.support.v7.widget.RecyclerView
-                android:id="@+id/recyclerView"
+                android:id="@+id/recyclerViewOpinion"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:scrollbars="vertical" />
