--- a/app/src/main/res/layout/activity_menu_tendero.xml
+++ b/app/src/main/res/layout/activity_menu_tendero.xml
@@ -5,18 +5,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="edu.eci.cosw.cheapestPrice.MenuTenderoActivity">
-
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <LinearLayout
-        android:layout_width="368dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:orientation="vertical"
-        tools:layout_editor_absoluteY="0dp"
-        tools:layout_editor_absoluteX="8dp">
+        android:orientation="vertical">
 
         <TextView
-            android:layout_width="310dp"
-            android:layout_height="39dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
             android:text="Información de tu Tienda"
             android:textSize="26dp"
@@ -31,7 +31,7 @@
 
             <TextView
                 android:id="@+id/textShopName"
-                android:layout_width="100dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="18dp"
                 android:text="Nombre: "
@@ -41,8 +41,8 @@
 
             <EditText
                 android:id="@+id/shopName"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:textSize="15dp"
                 android:text=" "/>
 
@@ -54,7 +54,7 @@
 
             <TextView
                 android:id="@+id/textShopNit"
-                android:layout_width="100dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="18dp"
                 android:text="Nit: "
@@ -64,8 +64,8 @@
 
             <EditText
                 android:id="@+id/shopNit"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:textSize="15dp"
                 android:text=" "/>
 
@@ -77,7 +77,7 @@
 
             <TextView
                 android:id="@+id/textShopAddress"
-                android:layout_width="100dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="18dp"
                 android:text="Dirección: "
@@ -87,15 +87,15 @@
 
             <EditText
                 android:id="@+id/shopAddress"
-                android:layout_width="170dp"
-                android:layout_height="50dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:textSize="15dp"
                 android:text=" "/>
 
             <Button
                 android:id="@+id/verMapa"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:text="Verificar dirección"
                 android:onClick="verMapa"/>
 
@@ -124,7 +124,7 @@
 
             <TextView
                 android:id="@+id/textShopPhone"
-                android:layout_width="100dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="18dp"
                 android:text="Teléfono: "
@@ -134,8 +134,8 @@
 
             <EditText
                 android:id="@+id/shopPhone"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:textSize="15dp"
                 android:text=" "/>
 
@@ -162,7 +162,7 @@
 
             <Button
                 android:id="@+id/productos"
-                android:layout_width="180dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="18dp"
                 android:text="Productos"
@@ -184,6 +184,7 @@
         </LinearLayout>
 
     </LinearLayout>
+    </ScrollView>
 
 
 </android.support.constraint.ConstraintLayout>
