--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -16,17 +16,40 @@
         android:clickable="true"
         android:src="@mipmap/ic_logo_round"
         app:backgroundTint="@color/colorPrimary"
-        android:layout_gravity="end|bottom"
-        android:onClick="redirect"
-        tools:layout_editor_absoluteY="0dp"
-        tools:layout_editor_absoluteX="0dp" />
+        android:layout_gravity="bottom"
+        android:onClick="redirect" />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/priceOrder"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        android:src="@mipmap/ic_price"
+        app:backgroundTint="@color/colorPrimary"
+        android:layout_gravity="bottom"
+        app:layout_anchor="@id/redirect"
+        app:layout_anchorGravity="top"
+        android:layout_marginLeft="65dp"
+        android:layout_marginTop="0dp"
+        android:onClick="orderPrice" />
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/locationOrder"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        android:src="@mipmap/ic_location"
+        app:backgroundTint="@color/colorPrimary"
+        android:layout_gravity="bottom"
+        app:layout_anchor="@id/priceOrder"
+        app:layout_anchorGravity="top"
+        android:layout_marginLeft="127dp"
+        android:layout_marginTop="0dp"
+        android:onClick="orderPos" />
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay"
-        tools:layout_editor_absoluteY="0dp"
-        tools:layout_editor_absoluteX="8dp">
+        android:theme="@style/AppTheme.AppBarOverlay">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
@@ -42,8 +65,6 @@
         android:id="@+id/card_view_search_products"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scrollbars="vertical"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="48dp" />
+        android:scrollbars="vertical"/>
 
 </android.support.design.widget.CoordinatorLayout>
